# nano01_course02_classify_pet_images

./: .gitignore  README.md  pyproject.toml
src/intropyproject_classify_pet_images/: __init__.py
src/intropyproject_classify_pet_images/data/: adjust_results4_isadog.py  alexnet_pet-images.txt  alexnet_uploaded-images.txt  calculates_results_stats.py  check_images.py  check_images.txt  classifier.py  classify_images.py  get_input_args.py  get_pet_labels.py  print_results.py  resnet_pet-images.txt  resnet_uploaded-images.txt  test_classifier.py  vgg_pet-images.txt  vgg_uploaded-images.txt
tests/: conftest.py  test_adjust_results4_isadog.py  test_calculates_results_stats.py  test_classify_images.py  test_get_input_args.py  test_get_pet_labels.py  test_print_results.py
